<resources>
    <string name="app_name">vapCycleCalc</string>
    <string name="select">Select a component</string>
    <string name="operations">Select an operation</string>
    <string name="canvas">Canvas</string>
    <string name="icon_add">Add a component</string>
    <string name="icon_duplicate">Duplicate a component</string>
    <string name="icon_remove">Remove a component</string>
    <string name="icon_confirm">Confirm</string>
    <string name="icon_settings">Settings</string>
    <string name="turbine">Turbine</string>
    <string name="pump">Pump</string>
    <string name="condenser">Condenser</string>
    <string name="boiler">Boiler</string>
    <string name="input">In</string>
    <string name="output">Out</string>
    <string name="properties">Properties</string>
    <string name="hint_name">Name of the component</string>
    <string name="hint_mass">Mass</string>
    <string name="hint_input">Input</string>
    <string name="hint_output">Output</string>
    <string name="hint_efficiency">Isentropic efficiency</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="boiler_name">B1</string>
    <string name="condenser_name">C1</string>
    <string name="turbine_name">T1</string>
    <string name="pump_name">P1</string>
    <string name="properties_result">Additional information and results</string>
    <string name="temperature_hint">Temperature value</string>
    <string name="pressure_hint">Pressure value</string>
    <string name="temperature_pressure_hint">Temperature or pressure value</string>
    <string name="condenser_drop_down_menu">T/P</string>
    <string name="turbine_pump_efficiency">Efficiency</string>
    <string name="turbine_output">Output in kW</string>
    <string name="calculate">Calculate</string>
    <string name="enthalpy_example">h1</string>
    <string name="enthalpy_unit_example">2758 kJ/kg</string>
    <string name="sampleText">Sample text</string>
    <string name="error">Error</string>

    <array name="condenser_array">
        <item>T</item>
        <item>P</item>
    </array>
</resources>