<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSecondaryVariant"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/error"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleText"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textColor="?attr/colorError"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/okBtnCycleDialog"
        style="@style/Widget.App.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>