<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pumpLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/componentImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pump" />

    <TextView
        android:id="@+id/inputTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/input"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/componentImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/output"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/componentImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/componentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/pump_name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/componentImg" />

    <com.example.vapcyclecalc.RightBox
        android:id="@+id/rightSelection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/componentImg"
        app:layout_constraintEnd_toEndOf="@+id/componentImg"
        app:layout_constraintTop_toTopOf="@+id/componentImg" />

    <com.example.vapcyclecalc.LeftBox
        android:id="@+id/leftSelection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/componentImg"
        app:layout_constraintStart_toStartOf="@+id/componentImg"
        app:layout_constraintTop_toTopOf="@+id/componentImg" />

</androidx.constraintlayout.widget.ConstraintLayout>